<resources>
    <string name="app_name">Timetable App</string>
    <string name="addBtn">Add</string>
    <string name="addActivityTitle">Add new activity</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="linkDisplay">Display text\nfor link</string>
    <string name="link">Website link</string>
    <string name="startTime">Starting time</string>
    <string name="endTime">Finishing time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="minuteBefore">Minutes Before</string>
    <string-array name="days">
       <item>Sunday</item>
       <item>Monday</item>
       <item>Tuesday</item>
       <item>Wednesday</item>
       <item>Thursday</item>
       <item>Friday</item>
       <item>Saturday</item>
    </string-array>
</resources>